# hordelib

./: .changelog  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  batch_img2img.json  build_helper.py  mypy.ini  nn_inspect.ipynb  publish.py  pyinstaller.py  pyinstaller_test_entrypoint.py  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.train.txt  requirements.txt  run.cmd  setup.cfg  tox.ini  train.py  train_analyze_data.py  train_example.yaml  train_filter_data.py  train_lgbm.py  train_merge_files.py  train_parallel.sh
.github/workflows/: maintests.yml  prtests.yml  pypi.yml  release.yml  tests.yaml
docs/: adding-a-baseline.md  adding-a-pipeline.md  comfyui-bridge.md
examples/: download_all_sd_models.py  kudos.py  lora_downloader.py  make_index.py  make_index_all_models.py  run_all_models.py  run_all_stress_tests.py  run_cache_test.py  run_clip.py  run_controlnet.py  run_controlnet_annotator.py  run_facefix.py  run_img2img.py  run_img2img_hires.py  run_img2img_inpaint.py  run_img2img_inpaint_mask.py  run_img2img_mask.py  run_img2img_outpaint.py  run_inpainting.py  run_kudos_test.py  run_long_prompt_check.py  run_lora.py  run_memory_test.py  run_performance_test.py  run_sdk_inference_example.py  run_speed_test.py  run_stress_test.py  run_stress_test_all.py  run_stress_test_cnet.py  run_stress_test_cnet_preproc.py  run_stress_test_dynamic.py  run_stress_test_img2img.py  run_stress_test_job_collection.py  run_stress_test_mixed.py  run_stress_test_pp.py  run_stress_test_txt2img.py  run_stress_test_txt2img_hiresfix.py  run_txt2img.py  run_txt2img_hires.py  run_txt2img_local_model.py  (+1 more)
hordelib/: __init__.py  __pyinstaller.py  _version.py  api.py  benchmark.py  beta_models.py  comfy.py  comfy_horde.py  config_path.py  consts.py  exceptions.py  feature_impact.py  feature_requirements.py  horde.py  initialisation.py  install.py  install_comfy.patch  install_comfy.py  metrics.py  node_model_loader.py  preload.py  profiling.py  run_comfyui.patch  run_comfyui.py  safety_checker.py  settings.py  shared_model_manager.py  train.py  vram_planning.py
hordelib/blip/: caption.py
hordelib/clip/: interrogate.py
hordelib/execution/: __init__.py  comfy_events.py  comfy_patches.py  component_cache.py  component_materialize.py  component_stability_probe.py  graph_utils.py  in_process.py  interface.py  model_dirs.py  phase_timing.py  progress_hook.py  results.py  sampling_lease.py  server_shim.py  shared_components.py  stage_graph.py  stage_payloads.py  standalone_vae.py  zero_copy_load.py
hordelib/installation/: __init__.py  __main__.py  installer.py  manifest.json  manifest.py
hordelib/integrations/: __init__.py  logfire_comfy_internals.py  logfire_setup.py
hordelib/model_database/: aitemplate.json  blip.json  clip.json  codeformer.json  controlnet.json  db.json  db_dep.json  db_embeds.json  diffusers.json  esrgan.json  gfpgan.json  safety_checker.json  stable_diffusion.json
hordelib/model_manager/: __init__.py  aitemplate.py  annotator_provider.py  base.py  blip.py  civitai_adhoc.py  civitai_provider.py  civitai_records.py  clip.py  codeformer.py  compvis.py  controlnet.py  controlnet_annotator.py  diffusers.py  esrgan.py  gfpgan.py  hyper.py  lora.py  miscellaneous.py  new.py  safety_checker.py  sdu.py  ti.py  torch_hijack.py
hordelib/nodes/: __init__.py  node_clip_similarities.py  node_controlnet_model_loader.py  node_image_loader.py  node_image_output.py  node_lora_loader.py  node_model_loader.py  node_seamless_tiling.py  node_stage_io.py  node_upscale_model_loader.py  node_v3_canary.py  nodes_postprocessor_model.py
hordelib/pipeline/: __init__.py  comfy_node_inputs.json  constants.py  context.py  definition.py  graph.py  horde_compat.py  identifiers.py  node_schemas.py  patches.py  payload.py  payload_pp.py  registry.py  resolution.py  sdk_adapter.py  template.py
hordelib/pipeline_designs/: pipeline_controlnet.json  pipeline_controlnet_annotator.json  pipeline_controlnet_hires_fix.json  pipeline_flux.json  pipeline_image_facefix.json  pipeline_image_upscale.json  pipeline_qr_code.json  pipeline_qwen.json  pipeline_stable_cascade.json  pipeline_stable_cascade_2pass.json  pipeline_stable_cascade_remix.json  pipeline_stable_diffusion.json  pipeline_stable_diffusion_hires_fix.json  pipeline_stable_diffusion_img2img_mask.json  pipeline_stable_diffusion_paint.json
hordelib/pipelines/: pipeline_controlnet.json  pipeline_controlnet_annotator.json  pipeline_controlnet_hires_fix.json  pipeline_creative_upscale.json  pipeline_flux.json  pipeline_image_facefix.json  pipeline_image_upscale.json  pipeline_qr_code.json  pipeline_qwen.json  pipeline_stable_cascade.json  pipeline_stable_cascade_2pass.json  pipeline_stable_cascade_remix.json  pipeline_stable_diffusion.json  pipeline_stable_diffusion_hires_fix.json  pipeline_stable_diffusion_img2img_mask.json  pipeline_stable_diffusion_paint.json  pipeline_z_image.json  pipeline_zimage.json
hordelib/pyinstaller_hooks/: hook-hordelib.horde.py
kudos_models/: inference-time-data-v20.json  inference-time-data-validation-v20.json
tests/: CHANGELOG.md  __init__.py  conftest.py  download_model.py  make_index.py  run_controlnet.py  run_controlnet_annotator.py  run_facefix.py  run_img2img.py  run_img2img_hires.py  run_img2img_inpaint.py  run_img2img_inpaint_mask.py  run_img2img_outpaint.py  run_inpainting.py  run_performance_test.py  run_txt2img.py  run_txt2img_hires.py  run_upscale.py  stage_subprocess_runner.py  test_annotator_prefetch.py  test_annotator_provider.py  test_beta_models.py  test_blip.py  test_clip.py  test_comfy.py  test_comfy_contract_drift.py  test_comfy_install.py  test_component_cache_gpu.py  test_cuda.py  test_device_pinning.py  test_dynamic_prompt.py  test_feature_impact_envelope.py  test_feature_requirements.py  test_horde.py  test_horde_controlnet_annotator.py  test_horde_generate.py  test_horde_inference.py  test_horde_inference_cascade.py  test_horde_inference_controlnet.py  test_horde_inference_custom_model.py  (+42 more)
(+402 files in other folders)
