[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "horde-engine"
description = "A wrapper around ComfyUI to allow use by AI Horde."
authors = [
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "db0", email = "mail@dbzer0.com"},
    {name = "Jug", email = "jugdev@proton.me"},
]
readme = "README.md"
requires-python = ">=3.12"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

# Don't specify dynamic deps for tox, only for build
dynamic=["version"]
dependencies = [
    "accelerate>=1.11.0",
    "addict>=2.4.0",
    "aiohttp>=3.11.8",
    "alembic",
    "av>=16.0.0",
    "blake3",
    "clip-anytorch>=2.6.0",
    "comfy-aimdo==0.4.9",
    "comfy-kitchen==0.2.10",
    "comfyui-embedded-docs==0.5.3",
    "comfyui-frontend-package==1.45.15",
    "comfyui-workflow-templates==0.9.98",
    "diffusers>=0.25.0",
    "distro>=1.9.0",
    "einops",
    "fairscale>=0.4.13",
    "filelock",
    "fuzzywuzzy>=0.18.0",
    "gitpython>=3.1.45",
    "horde-model-reference==3.0.0",
    "horde-sdk>=0.20.1",
    "kornia>=0.7.1",
    "logfire[system-metrics]==4.14.2",
    "loguru>=0.7.3",
    "lpips>=0.1.4",
    "numpy>=1.25.0",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.32.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "opentelemetry-instrumentation-aiohttp-client>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "pillow",
    "psutil",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pynvml>=13.0.1",
    "python-dotenv>=1.2.1",
    "pytorch-lightning>=2.5.6",
    "pyyaml",
    "qrcode==7.4.2",
    "rembg[cpu]>=2.0.67",
    "requests",
    "safetensors>=0.4.2",
    "scikit-image>=0.25.2",
    "scipy",
    "sentencepiece",
    "simpleeval>=1.0.0",
    "soundfile>=0.13.1",
    "spandrel>=0.4.1",
    "spandrel-extra-arches>=0.2.0",
    "sqlalchemy>=2.0.0",
    "strenum>=0.4.15",
    "timm==0.9.16",
    "tokenizers>=0.13.3",
    "torchaudio==2.9.1",
    "torchdiffeq>=0.2.5",
    "torchsde",
    "torchvision==0.24.1",
    "tqdm",
    "transformers>=4.50.3",
    "typing-extensions>=4.15.0",
    "unidecode>=1.4.0",
    "yarl>=1.18.0",
]
#dynamic=["version", "dependencies"]


[project.optional-dependencies]
cu128 = [
    "torch==2.9.1",
]
rocm = [
    "torch==2.9.1",
    "pytorch-triton-rocm>=3.5.1 ; sys_platform == 'linux'",
]
cpu = [
    "torch==2.9.1",
]

[tool.uv]
python-preference = "managed"
conflicts = [
    [
        {extra = "cu128"},
        {extra = "rocm"},
        {extra = "directml"},
        {extra = "cpu"},
    ],
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu128", extra = "cu128"},
    {index = "pytorch-rocm", extra = "rocm"},
    {index = "pytorch-cpu", extra = "cpu"},
]
pytorch-triton-rocm = [
    {index = "pytorch-rocm", extra = "rocm"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true



[project.urls]
"Homepage" = "https://github.com/Haidra-Org/hordelib"
"Bug Tracker" = "https://github.com/Haidra-Org/hordelib/issues"
"Changelog" = "https://github.com/Haidra-Org/hordelib/blob/releases/CHANGELOG.md"

[tool.setuptools]
license-files = ["LICENSE", "CHANGELOG*"]

[tool.setuptools_scm]
# Don't create a _version file in development mode
# We uncomment this automatically at build time.
#write_to = "hordelib/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-dir]
hordelib = "hordelib"


[options.index-client]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "build>=1.3.0",
    "coverage>=7.11.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "prometheus-client>=0.23.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "tox>=4.32.0",
    "types-colorama>=0.4.15.20250801",
    "types-docutils>=0.22.2.20251006",
    "types-pillow>=10.2.0.20240822",
    "types-psutil>=7.0.0.20251001",
    "types-pygments>=2.19.0.20250809",
    "types-pywin32>=311.0.0.20251008",
    "types-pyyaml>=6.0.12.20250915",
    "types-regex>=2025.11.3.20251106",
    "types-requests>=2.32.4.20250913",
    "types-setuptools>=80.9.0.20250822",
    "types-tabulate>=0.9.0.20241207",
    "types-tqdm>=4.67.0.20250809",
    "types-urllib3>=1.26.25.14",
]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=prepend",
    "--ignore=nodes"
]
filterwarnings = [
    "ignore:::.*",
    "default:::hordelib.*"
]
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "default_sd15_model: marks tests as default_sd15_model (deselect with '-m \"not default_sd15_model\"')",
    "default_sdxl_model: marks tests as default_sdxl_model (deselect with '-m \"not default_sdxl_model\"')",
    "refined_sdxl_model: marks tests as refined_sdxl_model (deselect with '-m \"not refined_sdxl_model\"')",
    "patch_harness: instrumentation-only tests for ComfyUI monkeypatch impact",
]

[tool.black]
line-length = 119
# Exclude ComfyUI and any packages we have installed in nodes/
exclude = '''
/(
    ComfyUI
  | \.tox
  | comfy_controlnet_preprocessors
  | comfy_qr
  | comfyui_layerdiffuse
  | facerestore
  | build
)/
''' # If you change this, you probably need to also change [tool.mypy] below

[tool.ruff] # XXX this isn't part of CI yet
line-length=119
exclude=["ComfyUI", "comfy_controlnet_preprocessors", "facerestore_cf", "comfy_qr", "comfyui_layerdiffuse", "build"]
ignore=[
    # "F401", # imported but unused
    "E402", # Module level import not at top of file
    "A002", # Argument `x` is shadowing a python builtin
    "A001", # Variable `x` is shadowing a python builtin
    "INP001", # ... is part of an implicit namespace package. Add an `__init__.py`.
]
select = [
    "A",    # flake8-builtins
    "I",    # isort
    # "S",    # Bandit
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings


    "YTT",  # flake8-2020
    # "BLE",    # flake8-blind-except
    "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    # "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    # "T20",  # flake8-print
    "UP",   # pyupgrade
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    # "SLF",  # flake8-self
    # "SIM",  # flake8-simplify
    # "ARG",  # flake8-unused-arguments
    # "TRY",  # tryceratops
    "RUF100"
]

[tool.ruff.per-file-ignores]
"comfy_horde.py" = ["I001", "F401"] # I001 is isort, F401 is imported but unused
"make_index.py" = ["E501"] # E501 is line too long
"med.py" = ["E501", "UP035"]
"vit.py" = ["E501", "UP035", "F821"] # F821 looks like a real bug, suppressed only for dev CI purposes
"run_stress_test.py" = ["F841"]
