[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "horde-engine"
description = "A wrapper around ComfyUI to allow use by AI Horde."
authors = [
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "db0", email = "mail@dbzer0.com"},
    {name = "Jug", email = "jugdev@proton.me"},
]
readme = "README.md"
requires-python = ">=3.12"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

dynamic = ["version"]
dependencies = [
    # NOTE ON NODE-REQUIREMENT MIRRORING:
    # The installer (hordelib/installation/installer.py) clones the manifest's custom nodes but does
    # NOT run their requirements.txt, so some deps below are not imported by hordelib itself; they
    # exist only to satisfy a cloned node at runtime. comfyui_controlnet_aux and facerestore_cf need
    # addict, ftfy, matplotlib, omegaconf, scikit-image and yapf; these have wheels on every backend,
    # so they stay in base and the node package always imports.
    # The heavy, backend-CONSTRAINED annotator deps (onnxruntime, mediapipe, fvcore, trimesh, yacs,
    # albumentations, scikit-learn) are deliberately NOT in base: onnxruntime/mediapipe have no wheels
    # for some accelerators (Intel XPU / Apple MPS / Ascend) and would block a base install there. They
    # now live in the `controlnet` feature extra (see [project.optional-dependencies]).
    # comfyui_controlnet_aux degrades per-detector when they are absent (each node_wrapper import is
    # guarded), so a base install still loads the node and simply offers fewer preprocessors. Do not
    # move the universally-available mirror deps out of base or the node stops importing.
    "accelerate>=1.11.0",
    "addict>=2.4.0",  # comfyui_controlnet_aux + facerestore_cf node requirement (not a hordelib import)
    "aiohttp>=3.11.8",
    "alembic",
    "av>=16.0.0",
    "blake3",
    "comfy-aimdo==0.4.9",
    "comfy-kitchen==0.2.10",
    "comfyui-embedded-docs==0.5.3",
    "comfyui-frontend-package==1.45.15",
    "comfyui-workflow-templates==0.9.98",
    "distro>=1.9.0",
    "einops",
    "filelock",
    "ftfy",  # comfyui_controlnet_aux node requirement (previously satisfied transitively via open-clip-torch)
    "fuzzywuzzy>=0.18.0",
    "gitpython>=3.1.45",
    "horde_model_reference>=5.1.1,<6.0.0",
    "horde-sdk>=0.20.1",
    "kornia>=0.7.1",
    "logfire[system-metrics]==4.14.2",
    "loguru>=0.7.3",
    "lpips",
    "matplotlib>=3.10.9",  # comfyui_controlnet_aux node requirement (not a hordelib import)
    "numpy>=1.25.0",
    "omegaconf>=2.3.0",  # comfyui_controlnet_aux + facerestore_cf node requirement (not a hordelib import)
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "opentelemetry-instrumentation-aiohttp-client>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "pillow",
    "psutil",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "nvidia-ml-py>=12.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml",
    "qrcode==7.4.2",
    "requests",
    "safetensors>=0.4.2",
    "scikit-image>=0.25.2",  # comfyui_controlnet_aux node requirement (universal wheels; stays in base)
    "scipy",
    "sentencepiece",
    "simpleeval>=1.0.0",
    "spandrel>=0.4.1",
    "sqlalchemy>=2.0.0",
    "strenum>=0.4.15",
    "tokenizers>=0.13.3",
    "torchdiffeq>=0.2.5",
    "torchsde",
    # Ranges, not exact pins, so a consumer (e.g. the worker) can select any supported torch line
    # (2.9.1 through 2.12.0). torchvision pins the exact matching torch in its own metadata, so whichever
    # torch the consumer installs resolves the right pair (torch 2.9.1 -> torchvision 0.24.1; 2.12.0 ->
    # 0.27.0). torchvision is routed per-build to the matching CUDA wheel index (see [tool.uv.sources])
    # so its compiled CUDA version can never drift from torch's.
    "torchvision>=0.24.0,<0.28",
    "tqdm",
    "transformers>=4.50.3",
    "typing-extensions>=4.15.0",
    "unidecode>=1.4.0",
    "yapf>=0.43.0",  # comfyui_controlnet_aux node requirement (not a hordelib import)
    "yarl>=1.18.0",
]


# --- PyTorch build selection -------------------------------------------------------------------
#
# horde-engine does NOT pin a torch *version*: torchvision/torchaudio are declared as ranges (see
# [project.dependencies]) and torchvision pins the exact matching torch in its own metadata, so an
# install always resolves the latest torch those ranges allow (today: torch 2.12.0 -> torchvision
# 0.27.0 / torchaudio 2.11.0). To move to a newer torch line, bump only those two ranges; nothing here
# changes.
#
# You choose the *build* (which CUDA/CPU wheels) for your hardware with one thin extra per build -- the
# extra routes torch AND torchvision to the matching wheel index (see [tool.uv.sources]) so the two
# never disagree on their CUDA version; the version is whatever the ranges resolve:
#   uv sync --extra cu132   NVIDIA, exact CUDA 13.2 build
#   uv sync --extra cu130   NVIDIA, CUDA 13.0/13.1 build (also runs on a 13.2 driver)
#   uv sync --extra cu126   NVIDIA, CUDA 12.6+ driver (the only CUDA-12 build of torch 2.12.0; also runs
#                           on CUDA 13 drivers via NVIDIA driver backward-compatibility)
#   uv sync --extra cpu     no GPU (~100x slower; testing only)
#
# torchaudio is currently NOT installed by any of these: it has no +cu132 wheel and audio is unsupported, so it is
# omitted by default and stubbed at runtime (hordelib.utils.torch_build). If you need audio, install a
# torchaudio build matching the active torch index ad-hoc, e.g.
# `uv pip install torchaudio --index-url https://download.pytorch.org/whl/cu130` (cu126/cu130/cpu only).
#
# ROCm has no current lockable build (PyTorch has not published the pytorch-triton-rocm that torch
# 2.10-2.12 rocm7.x wheels need); install it ad-hoc, e.g. `uv pip install torch==2.9.1 torchvision
# pytorch-triton-rocm --extra-index-url https://download.pytorch.org/whl/rocm6.4`.
# Exactly one extra may be active at a time (see [tool.uv] conflicts).
[project.optional-dependencies]
# torchvision is listed alongside torch so its per-build source routing in [tool.uv.sources] applies
# (uv requires a routed package to appear in the extra it is routed for). The version range stays in
# [project.dependencies]; these entries only pin the wheel index for the chosen build.
cu126 = ["torch", "torchvision"]
cu130 = ["torch", "torchvision"]
cu132 = ["torch", "torchvision"]
cpu = ["torch", "torchvision"]

# --- Feature extras ----------------------------------------------------------------------------
# These gate heavy/optional features out of the lean base so a base install stays close to ComfyUI's 
# own dependency set. They are NOT in the [tool.uv] conflicts set, so any one torch-build extra above 
# may be combined with any of these. The worker installs a feature extra in the dedicated capability 
# process that offers that feature (off by default unless configured).
#
# A call site that needs one of these guards its import via hordelib.utils.optional_deps so a missing
# extra produces an actionable "pip install horde-engine[<extra>]" error instead of a bare ImportError.
#
layerdiffuse = ["diffusers>=0.25.0"]  # transparent/RGBA generation via the comfyui_layerdiffuse node
upscale-extra = ["spandrel-extra-arches>=0.2.0"]  # extra (non-commercial) upscaler archs; comfy adds them if present

# strip_background post-processor. rembg pulls onnxruntime, which has no XPU/MPS/Ascend wheels, so it is
# opt-in; the call site (hordelib.utils.image_utils.strip_background) guards its import via optional_deps.
rembg = ["rembg[cpu]>=2.0.67"]

# Full comfyui_controlnet_aux annotator dep set, kept out of base because onnxruntime/mediapipe lack wheels
# for some accelerators. Installing this enables the DWPose/openpose/mediapipe-face/etc. preprocessors; the
# pure-torch detectors (e.g. canny, depth via MiDaS) work without it.
controlnet = [
    "onnxruntime>=1.16",
    "mediapipe>=0.10",
    "fvcore",
    "trimesh[easy]",
    "yacs",
    "albumentations",
    "scikit-learn",
]

[tool.uv]
python-preference = "managed"
conflicts = [
    [
        {extra = "cu126"},
        {extra = "cu130"},
        {extra = "cu132"},
        {extra = "cpu"},
    ],
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126", extra = "cu126"},
    {index = "pytorch-cu130", extra = "cu130"},
    {index = "pytorch-cu132", extra = "cu132"},
    {index = "pytorch-cpu", extra = "cpu"},
]
# torchvision is routed alongside torch so the pair always shares one CUDA build (a torchvision left to
# resolve from generic PyPI would pull a different CUDA build and break the install).
torchvision = [
    {index = "pytorch-cu126", extra = "cu126"},
    {index = "pytorch-cu130", extra = "cu130"},
    {index = "pytorch-cu132", extra = "cu132"},
    {index = "pytorch-cpu", extra = "cpu"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true



[project.scripts]
horde-engine-install = "hordelib.installation.__main__:main"

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/hordelib"
"Bug Tracker" = "https://github.com/Haidra-Org/hordelib/issues"
"Changelog" = "https://github.com/Haidra-Org/hordelib/releases"

[project.entry-points.pyinstaller40]
hook-dirs = "hordelib.__pyinstaller:get_hook_dirs"
tests = "hordelib.__pyinstaller:get_PyInstaller_tests"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Never emit a PEP 440 local version (+gHASH/.dDATE): PyPI rejects local versions and
# trusted publishing builds straight from the tagged commit, so a clean tag => clean version.
local_scheme = "no-local-version"

[tool.hatch.build]
# Hatchling excludes by .gitignore *pattern*, unlike setuptools-scm which used `git ls-files`.
# The vendored facerestore node ships git-TRACKED source under directories named `models/`,
# which the repo's broad `models/` ignore rule (meant for runtime model caches) shadows.
# Force those tracked files back into both the sdist and the wheel.
artifacts = ["hordelib/nodes/**/models/**"]

[tool.hatch.build.hooks.vcs]
# Written into built wheels so `hordelib._version.__version__` resolves. This file is NOT the
# release sentinel: RELEASE_VERSION / get_comfyui_path() key off the source tree instead
# (see hordelib/config_path.py), so an editable install writing this file stays "dev mode".
version-file = "hordelib/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["hordelib"]

[tool.hatch.build.targets.sdist]
# Lean but self-sufficient: the package plus the metadata needed to build a wheel from the sdist.
only-include = ["hordelib", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "coverage>=7.11.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "prometheus-client>=0.23.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.14.4",
    "types-colorama>=0.4.15.20250801",
    "types-docutils>=0.22.2.20251006",
    "types-pillow>=10.2.0.20240822",
    "types-psutil>=7.0.0.20251001",
    "types-pygments>=2.19.0.20250809",
    "types-pywin32>=311.0.0.20251008",
    "types-pyyaml>=6.0.12.20250915",
    "types-regex>=2025.11.3.20251106",
    "types-requests>=2.32.4.20250913",
    "types-setuptools>=80.9.0.20250822",
    "types-tabulate>=0.9.0.20241207",
    "types-tqdm>=4.67.0.20250809",
    "types-urllib3>=1.26.25.14",
]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=prepend",
    "--ignore=nodes"
]
filterwarnings = [
    "ignore:::.*",
    "default:::hordelib.*"
]
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "default_sd15_model: marks tests as default_sd15_model (deselect with '-m \"not default_sd15_model\"')",
    "default_sdxl_model: marks tests as default_sdxl_model (deselect with '-m \"not default_sdxl_model\"')",
    "default_qwen_model: marks tests as default_qwen_model (deselect with '-m \"not default_qwen_model\"')",
    "refined_sdxl_model: marks tests as refined_sdxl_model (deselect with '-m \"not refined_sdxl_model\"')",
    "patch_harness: instrumentation-only tests for ComfyUI monkeypatch impact",
]

# Migrated from tox.ini when tox was dropped in favour of `uv run`. coverage.py reads these
# from pyproject.toml automatically (pytest-cov picks them up; no --cov-config needed).
[tool.coverage.run]
omit = [
    "ComfyUI/*",
    "*/nodes/*",
    "*/config.py",
    "*/config-3.py",
]
disable_warnings = ["couldnt-parse"]

[tool.coverage.paths]
source = ["hordelib/"]

[tool.coverage.report]
omit = [
    "ComfyUI/*",
    "*/nodes/*",
    "*/config.py",
    "*/config-3.py",
]
ignore_errors = true
skip_empty = true

[tool.black]
line-length = 119
# Exclude ComfyUI and any packages we have installed in nodes/
exclude = '''
/(
    ComfyUI
  | comfyui_layerdiffuse
  | facerestore_cf
  | build
)/
''' # If you change this, you probably need to also change mypy.ini accordingly

[tool.ruff] # XXX this isn't part of CI yet
line-length=119
exclude=["ComfyUI", "facerestore_cf", "comfyui_layerdiffuse", "build"]

[tool.ruff.lint]
ignore=[
    # "F401", # imported but unused
    "E402", # Module level import not at top of file
    "A002", # Argument `x` is shadowing a python builtin
    "A001", # Variable `x` is shadowing a python builtin
    "INP001", # ... is part of an implicit namespace package. Add an `__init__.py`.
    "COM812", # The following rule may cause conflicts when used with the formatter: `COM812`. To avoid unexpected behavior, we recommend disabling this rule
]
select = [
    "A",    # flake8-builtins
    "I",    # isort
    # "S",    # Bandit
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings


    "YTT",  # flake8-2020
    # "BLE",    # flake8-blind-except
    "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    # "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    # "T20",  # flake8-print
    "UP",   # pyupgrade
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    # "SLF",  # flake8-self
    # "SIM",  # flake8-simplify
    # "ARG",  # flake8-unused-arguments
    # "TRY",  # tryceratops
    "RUF100"
]

[tool.ruff.lint.per-file-ignores]
"comfy_horde.py" = ["I001", "F401"] # I001 is isort, F401 is imported but unused
"make_index.py" = ["E501"] # E501 is line too long
"med.py" = ["E501", "UP035"]
"vit.py" = ["E501", "UP035", "F821"] # F821 looks like a real bug, suppressed only for dev CI purposes
"run_stress_test.py" = ["F841"]
